# AI-Agent

./: .gitignore  Dockerfile  MANIFEST.in  README.md  consensus-diff.py  langgraph_nodes.py  main.py  prepare_to_submit.py  property_values.json  pyproject.toml  requirements.txt
074527L1060260060/: property_seed.json  unnormalized_address.json
counties/Lake/: README.md
counties/MiamiDade/: data_extractor.py  layout_extractor.py  owner_processor.py
counties/lee/: data_extractor.py
counties/miami dade/: data_extractor.py  owner_processor.py
counties/palm beach/: address_extraction.py  address_validation.py  data_extractor.py
html/: 10131561.html  10131567.html  10131571.html  10131576.html  10131577.html  10131582.html  10131583.html  10131588.html  10131592.html  10131594.html  10131595.html  10131598.html  10131599.html  10131603.html  10131604.html  10131605.html  10131608.html  10131609.html  10131612.html  10131613.html  10131615.html  10131624.html  10131625.html  10131628.html  10131629.html  10131632.html  10131633.html  10131639.html  10131642.html  10131644.html  10131648.html  10131649.html  10131652.html  10131653.html  10131654.html  10131658.html  10131664.html  10131665.html  10131668.html  10131669.html  (+22 more)
lee_addresses_test/: 014322C3013000001.json
test_evaluator_agent/: __init__.py  __main__.py  cli.py  main.py  setup_mcp.py  utils.py
test_evaluator_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_evaluator_agent/counties/MiamiDade/: data_extractor.py  layout_extractor.py  structure_extractor.py  utility_extractor.py
test_evaluator_agent/counties/fort bend/: data_extractor.py  layout_extractor.py  owner_processor.py  (+1 more)
test_evaluator_agent_package/test_evaluator_agent/: cli.py
utils/: get_parcel_folio.py  separate_each_parcel_address.py  test_addresses.py
(+9 files in other folders)
