[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test-evaluator-agent"
version = "0.1.0"
description = "AI-powered data extraction evaluator agent using LangGraph"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Agentic Data Mining", email = "noreply@example.com"}
]
keywords = ["ai", "langgraph", "data-extraction", "evaluator", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=2.0.0",
    "requests>=2.28.0",
    "langgraph>=0.4.0",
    "langchain>=0.3.0",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph-checkpoint>=2.0.0",
    "langgraph-prebuilt>=0.2.0",
    "jsonschema>=4.0.0",
    "anthropic>=0.50.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "GitPython>=3.1.44",
]

[project.scripts]
test-evaluator-agent = "test_evaluator_agent.cli:main"

[project.urls]
Homepage = "https://github.com/StaircaseAPI/agentic-data-mining"
Repository = "https://github.com/StaircaseAPI/agentic-data-mining"
Issues = "https://github.com/StaircaseAPI/agentic-data-mining/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["test_evaluator_agent*"]

[tool.setuptools.package-data]
test_evaluator_agent = ["*.py"]